--- a/index.html
+++ b/index.html
@@ -130,7 +130,75 @@ const BASE_GAP=180;
 
 /* ========== QUESTIONS ========= */
 const questions=[
- {q:'À quoi sert un CV ?',c:['Présenter ses compétences','Dormir','Jouer'],a:0},
- {q:'Un entretien sert principalement à ?',c:['Évaluer un c]()
+const questions = [
+  {
+    q: "Que faut-il absolument mettre en haut d’un CV ?",
+    c: ["Nom, prénom et coordonnées", "Une citation personnelle", "Ses loisirs détaillés"],
+    a: 0
+  },
+  {
+    q: "Quelle est la durée idéale pour un CV ciblé ?",
+    c: ["Une page claire et synthétique", "Plusieurs pages détaillées", "Autant de pages que d’expériences"],
+    a: 0
+  },
+  {
+    q: "Que signifie le terme « soft skill » ?",
+    c: ["Compétence liée au comportement et au savoir-être", "Outil informatique", "Certification officielle"],
+    a: 0
+  },
+  {
+    q: "Que faire après avoir envoyé une candidature ?",
+    c: ["Relancer de manière polie après quelques jours", "Supprimer le contact", "Envoyer des messages tous les jours"],
+    a: 0
+  },
+  {
+    q: "Comment adapter son CV à une offre d’emploi ?",
+    c: ["Mettre en avant les compétences demandées", "Utiliser un CV générique", "Changer uniquement les couleurs"],
+    a: 0
+  },
+  {
+    q: "Qu’est-ce qu’une lettre de motivation ?",
+    c: ["Un texte personnalisé expliquant son intérêt pour le poste", "Un résumé du CV", "Une lettre pour se présenter"],
+    a: 0
+  },
+  {
+    q: "Quel comportement faut-il éviter en entretien ?",
+    c: ["Consulter son téléphone", "Écouter attentivement", "Poser des questions pertinentes"],
+    a: 0
+  },
+  {
+    q: "Qu’est-ce qu’un stage ?",
+    c: ["Une expérience professionnelle encadrée pour apprendre", "Un emploi à vie", "Un loisir"],
+    a: 0
+  },
+  {
+    q: "Pourquoi relancer une candidature ?",
+    c: ["Montrer sa motivation et son sérieux", "Mettre la pression au recruteur", "Exprimer son mécontentement"],
+    a: 0
+  },
+  {
+    q: "Qu’est-ce qu’un bon CV ?",
+    c: ["Un document clair, lisible et bien structuré", "Un texte long sans organisation", "Un document sans coordonnées"],
+    a: 0
+  },
+  {
+    q: "Quelle information ne doit pas figurer sur un CV ?",
+    c: ["Des informations médicales sensibles", "Les compétences", "Les expériences"],
+    a: 0
+  },
+  {
+    q: "Que faire si l’on ne sait pas répondre à une question en entretien ?",
+    c: ["L’admettre et expliquer comment chercher la réponse", "Inventer une réponse", "Changer de sujet"],
+    a: 0
+  },
+  {
+    q: "Quel ton adopter lors d’un entretien ?",
+    c: ["Professionnel et respectueux", "Froid et distant", "Trop familier"],
+    a: 0
+  },
+  {
+    q: "Comment prouver sa motivation ?",
+    c: ["Donner des exemples concrets",]()
+
 
 
